[gd_scene load_steps=27 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/PunkRobotSprite.png" type="Texture" id=2]
[ext_resource path="res://player/osb_left.png" type="Texture" id=3]
[ext_resource path="res://player/osb_right.png" type="Texture" id=4]
[ext_resource path="res://player/osb_jump.png" type="Texture" id=5]
[ext_resource path="res://player/osb_fire.png" type="Texture" id=6]
[ext_resource path="res://Crashed Scoreboard.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://player/Heart.tscn" type="PackedScene" id=8]
[ext_resource path="res://player/light.png" type="Texture" id=9]

[sub_resource type="ShaderMaterial" id=1]

[sub_resource type="Animation" id=2]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=3]

[sub_resource type="Animation" id=4]
length = 0.01
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 21 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=6]
length = 7.0
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.25, 1.5, 2, 4.5, 4.75, 5, 5.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 16, 19, 20, 19, 16 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 23, 24, 23 ]
}

[sub_resource type="Animation" id=9]
length = 0.5
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=10]
length = 0.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 4, 3, 2, 1, 0 ]
}

[sub_resource type="Animation" id=11]
length = 0.75
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.125, 0.25, 0.375, 0.5, 0.625 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 9, 8, 7, 6, 5 ]
}

[sub_resource type="Animation" id=12]
length = 1.25
loop = true
step = 0.25
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1, 1.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 5 ]
}

[sub_resource type="CapsuleShape2D" id=13]
height = 35.0854

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.776471, 0.305882, 0.305882, 1 ), Color( 1, 1, 1, 1 ), Color( 0.713726, 0.27451, 0.27451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=17]
radius = 25.4401

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
texture = ExtResource( 2 )
vframes = 2
hframes = 16
frame = 8

[node name="Smoke" type="Node2D" parent="Sprite"]
position = Vector2( 25.4758, -2.21059 )
rotation = -1.45648

[node name="BulletShoot" type="Position2D" parent="Sprite"]
position = Vector2( 30.8848, -2.45379 )

[node name="Jetpack" type="Position2D" parent="Sprite"]
position = Vector2( -20.1152, 17.5462 )

[node name="Anim" type="AnimationPlayer" parent="."]
anims/crouch = SubResource( 2 )
anims/damaged = SubResource( 3 )
anims/falling = SubResource( 4 )
anims/falling_weapon = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/idle_weapon = SubResource( 7 )
anims/jumping = SubResource( 8 )
anims/jumping_weapon = SubResource( 9 )
anims/run = SubResource( 10 )
anims/run_weapon = SubResource( 11 )
anims/standing_weapon_ready = SubResource( 12 )

[node name="Camera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
limit_smoothed = true
smoothing_speed = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.291992, 1.78734 )
shape = SubResource( 13 )

[node name="UI" type="CanvasLayer" parent="."]
editor/display_folded = true
layer = 0

[node name="Left" type="TouchScreenButton" parent="UI"]
position = Vector2( 20.7612, 607.768 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 3 )
passby_press = true
action = "move_left"
visibility_mode = 1

[node name="Right" type="TouchScreenButton" parent="UI"]
position = Vector2( 126.146, 608.374 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 4 )
passby_press = true
action = "move_right"
visibility_mode = 1

[node name="Jump" type="TouchScreenButton" parent="UI"]
position = Vector2( 1170.09, 548.214 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 5 )
action = "jump"
visibility_mode = 1

[node name="Fire" type="TouchScreenButton" parent="UI"]
position = Vector2( 1169.6, 453.21 )
scale = Vector2( 1.49157, 1.46265 )
normal = ExtResource( 6 )
action = "shoot"
visibility_mode = 1

[node name="Ammo" type="RichTextLabel" parent="UI"]
margin_left = 835.301
margin_top = 507.117
margin_right = 944.301
margin_bottom = 531.117
custom_fonts/normal_font = SubResource( 14 )
text = "10"
scroll_active = false

[node name="ScoreCard" type="RichTextLabel" parent="UI"]
light_mask = 0
margin_left = 324.641
margin_top = 5.36771
margin_right = 432.641
margin_bottom = 49.3677
custom_fonts/normal_font = SubResource( 15 )
text = "Score"
scroll_active = false

[node name="Score" type="RichTextLabel" parent="UI"]
light_mask = 0
margin_left = 436.18
margin_top = 5.03501
margin_right = 738.18
margin_bottom = 48.035
custom_fonts/normal_font = SubResource( 15 )
text = "10"
scroll_active = false

[node name="Current_Gun" type="RichTextLabel" parent="UI"]
margin_left = 747.922
margin_top = 512.037
margin_right = 820.922
margin_bottom = 537.037
text = "10"

[node name="Heart 01" parent="UI" instance=ExtResource( 8 )]
position = Vector2( 919.16, 29.3065 )

[node name="Heart 02" parent="UI" instance=ExtResource( 8 )]
position = Vector2( 887.16, 29.3065 )

[node name="Heart 03" parent="UI" instance=ExtResource( 8 )]
position = Vector2( 855.16, 29.3065 )

[node name="Heart 04" parent="UI" instance=ExtResource( 8 )]
position = Vector2( 823.16, 29.3065 )

[node name="Heart 05" parent="UI" instance=ExtResource( 8 )]
position = Vector2( 791.16, 29.3065 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -0.139878, 0.774338 )
scale = Vector2( 0.5, 0.5 )
z_index = 1
texture = ExtResource( 9 )
color = Color( 0.752941, 0.741176, 0.658824, 1 )
range_item_cull_mask = 3
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_gradient_length = 2.0
shadow_filter_smooth = 3.9

[node name="SecondAnim" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 16 )

[node name="isplayer" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="isplayer"]
visible = false
shape = SubResource( 17 )
